--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -13,6 +13,6 @@
     <router-outlet></router-outlet>
   </main>
   <footer class="app-footer">
-    Copyright © 2023 Michail Mazo
+    Copyright © 2021 - 2024 Michail Mazo
   </footer>
 </div>
